2008-03-20  Mickael Remond  <mremond@process-one.net>

	* src/eldap.erl: Improved logging. We now use ejabberd logging
	framework (EJAB-582).

	* src/eldap.erl: Faster LDAP reconnection (Thanks to Christophe
	Romain) (EJAB-581)
					 
2008-03-17  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s.erl: Only trigger s2s_connect_hook on
	successful connection (EJAB-566)
	* src/ejabberd_s2s_out.erl: Likewise

2008-03-15  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s.erl: API improvement: Added s2s_connect_hook
	(EJAB-566).

2008-03-13  Badlop  <badlop@process-one.net>

	* src/odbc/ejabberd_odbc.erl: Start ODBC explicitely because
	Erlang R12 doesn't start automatically like in R11 and
	older (thanks to Sergei Golovan)(EJAB-541)

	* src/ejabberd.hrl: Removed unused ejabberd_debug and
	PRIVACY_SUPPORT. Reordered the remaining options

	* doc/guide.tex: Describe option Matches in mod_vcard_ldap (thanks
	to Evgeniy Khramtsov)(EJAB-530).  Fix typo in the description of
	ldap_server option.
	* doc/guide.html: Likewise

	* src/mod_echo.erl: Small change to avoid a compilation warning of
	unused function

2008-03-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web_admin.erl (term_to_string): Show Erlang
	terms in one line in Erlang R12 (EJAB-503)

2008-03-11  Badlop  <badlop@process-one.net>

	* src/ejabberd_s2s_in.erl (get_cert_domains): When compiling with
	Erlang R12, replace the calls to deprecated module PKIX1Explicit88
	with OTP-PKIX (EJAB-556)

2008-03-10  Badlop  <badlop@process-one.net>

	* src/ejabberd_update.erl: Fix crash when browsing the Update
	page in Erlang R12 (EJAB-552)

2008-03-09  Badlop  <badlop@process-one.net>

	* src/mod_proxy65/mod_proxy65_service.erl: Implement alternative
	to the deprecated function inet:ip_to_bytes (thanks to Evgeniy
	Khramtsov)(EJAB-542)

2008-03-04  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Improve documentation of host_config
	add (EJAB-544)
	* doc/guide.html: Likewise